tests/errors/scalar_allocation_check_07.f90
program scalar_allocation_check_07
    implicit none
    character(len=:), allocatable :: s

    print *, s
end
